--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "dependencies": {
     "@clerk/nextjs": "^6.35.2",
     "@prisma/client": "^6.19.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "filesize": "^11.0.13",
+    "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.0",
     "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^20.19.25",
