--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "serve": "^14.2.5",
     "tailwindcss": "^3.4.18",
     "three": "^0.181.2"
   },
