--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.35.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "filesize": "^11.0.13",
@@ -23,6 +24,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.0",
+    "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -32,10 +34,12 @@
     "three": "^0.181.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.14",
     "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
